Fixed mobile width alignnone images and bumped CSS/JS reference revs.

--- a/css/src/content.less
+++ b/css/src/content.less
@@ -15,7 +15,7 @@
     font-size: 20px;
     font-style: italic;
     font-weight: 400;
-    line-height: 18px;
+    line-height: 24px;
     margin-bottom: 4px;
   }
 
@@ -64,6 +64,11 @@
     width: 100%;
   }
 
+  img.alignnone, div.alignnone img {
+    max-width: 100%;
+    height: auto;
+  }
+
   img.alignleft {
     float: left;
     margin-right: 10px;
@@ -102,6 +107,7 @@
   .wp-caption p {
     text-align: center;
     font-style: italic;
+    font-size: 12px;
     margin: 0 5px 5px 5px;
     padding: 0;
   }
